test/types/enum/lydia/use/namingConflictOtherModule.good
namingConflictOtherModule.chpl:4: error: Symbol a multiply defined
namingConflictOtherModule.chpl:8: error: Symbol a multiply defined
